css/styles.css
/* COLORS */
:root {
  font-family: "Be Vietnam", sans-serif;
  text-rendering: optimizeLegibility;
}

/* MOBILE - GENERAL */
.html {
  font-size: 14px;
  line-height: 1.3;
}

.wrapper {
  width: 80%;
  max-width: 960px;
  margin: 0 auto;
}

.cta {
  width: 7rem;
  padding: 0.6rem 0;
  font-size: 0.8rem;
  font-weight: 700;
  border: 1px solid transparent;
  border-radius: 20px;
  color: #fff;
  background-color: #f25f3a;
  box-shadow: 0px 6px 10px rgba(242, 95, 58, 0.65);
  cursor: pointer;
}
.cta:hover {
  background-color: rgba(242, 95, 58, 0.65);
}

/* BACKGROUND */
.container__tablet_bg {
  width: 100%;
  height: auto;
  position: absolute;
  z-index: -1;
  overflow-x: hidden;
}
.container__tablet_bg .img__tablet {
  width: 100%;
  position: relative;
  top: -5rem;
  right: -4rem;
}

/* NAVIGATION */
.nav {
  height: 5rem;
}

.container__logo {
  float: left;
}

.nav__logo {
  display: inline-block;
  padding: 2.5rem 0 0 0rem;
  width: 7rem;
  height: auto;
  margin-left: 1.5rem;
}

.container__hamburger {
  width: 2rem;
  float: right;
  position: relative;
  top: 2rem;
  right: 1rem;
  cursor: pointer;
}
.container__hamburger .line {
  width: 1.5rem;
  height: 3px;
  right: 0;
  margin: 5px 0;
  background-color: #242d52;
  transition: all 0.1s ease-in-out;
}
.container__hamburger.--clicked .line:first-of-type {
  transform: rotate(45deg) translate(4px, 6px);
}
.container__hamburger.--clicked .line:nth-of-type(2) {
  background-color: transparent;
}
.container__hamburger.--clicked .line:last-of-type {
  transform: rotate(-45deg) translate(5px, -8px);
}

.block__items {
  display: none;
}
.block__items.--visible {
  display: flex;
  flex-direction: column;
  position: absolute;
  text-align: center;
  top: 6rem;
  left: 0;
  right: 0;
  width: 85%;
  margin: 0 auto;
  padding: 1.5rem 0;
  background-color: #fff;
  box-shadow: 1px 1px 4px;
  border-radius: 4px;
}
.block__items .nav__item {
  padding: 0.7rem 0;
  font-size: 0.8rem;
  font-weight: 700;
  color: #242d52;
  cursor: pointer;
}
.block__items .nav__item:hover {
  color: #9095a7;
}

.nav__cta {
  display: none;
}

/* BLOC PRESENTATION */
.container__presentation {
  margin-top: 1rem;
}
.container__presentation .pic_charts {
  max-width: 85%;
  display: block;
  margin: auto;
}

.container__text_presentation {
  text-align: center;
  line-height: 1.3;
  margin: auto;
}
.container__text_presentation h1 {
  color: #242d52;
  padding-bottom: 0.5rem;
}
.container__text_presentation p {
  color: #9095a7;
  line-height: 1.5;
}

.presentation.cta {
  display: block;
  margin: 2rem auto;
}

/* ADVANTAGES */
.container__advantages {
  margin-top: 4rem;
  margin-left: auto;
  margin-right: auto;
  display: block;
}
.container__advantages .container__differences-question {
  text-align: center;
  margin-bottom: 2rem;
}
.container__advantages h2 {
  color: #242d52;
  padding-bottom: 1.5rem;
}
.container__advantages p {
  color: #9095a7;
}
.container__advantages:first-of-type, .container__advantages :nth-of-type(2) {
  margin-bottom: 2rem;
}
.container__advantages .container__list_of_advantages {
  position: relative;
  top: -2rem;
  counter-reset: section;
}
.container__advantages .container__list_of_advantages .advantage_title {
  margin-bottom: 1rem;
  margin-left: 3rem;
  color: #242d52;
  font-weight: 700;
}
.container__advantages .container__list_of_advantages .advantage_title:before {
  counter-increment: section;
  content: "0" counter(section);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 3em;
  height: 1.5rem;
  position: relative;
  text-align: center;
  top: 1.5rem;
  left: -3rem;
  background: #f25f3a;
  border-radius: 20px;
  color: #fff;
  font-size: 0.8rem;
  font-weight: 400;
}
.container__advantages .container__list_of_advantages .advantage_title:after {
  content: "";
  display: block;
  width: 100%;
  height: 1.5rem;
  position: absolute;
  top: 1.5rem;
  left: 0;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  z-index: -1;
  background-color: #fafafa;
}

/* MEDIA QUERIES */
@media screen and (min-width: 768px) {
  .html {
    font-size: 16px;
    line-height: 1.4;
  }

  /* BACKGROUND */
  .container__tablet_bg {
    display: flex;
    justify-content: center;
  }
  .container__tablet_bg .img__tablet {
    width: 46rem;
    top: -10rem;
    left: 27rem;
  }

  /* NAVIGATION */
  .nav__logo {
    margin-left: 0;
  }

  .container__hamburger {
    display: none;
  }

  .block__items {
    display: flex;
    position: relative;
    top: 2.3rem;
    justify-content: center;
  }
  .block__items .nav__item {
    padding: 0 1rem;
  }

  /* PRESENTATION */
  .container__presentation {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    margin-top: 5rem;
  }
  .container__presentation .container__charts {
    height: auto;
    position: relative;
    top: 2rem;
    display: flex;
    justify-content: flex-end;
  }
  .container__presentation .pic_charts {
    width: 100%;
    height: auto;
    margin: 0;
  }
  .container__presentation .container__text-presentation {
    width: 26rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }
  .container__presentation .container__text-presentation h1, .container__presentation .container__text-presentation p {
    text-align: left;
  }
  .container__presentation .container__text-presentation h1 {
    font-size: 3rem;
    line-height: 1.2;
    padding-bottom: 2rem;
  }
  .container__presentation .presentation.cta {
    display: block;
    margin: 2rem 0;
  }

  /* ADVANTAGES */
  .container__advantages {
    margin-top: 5rem;
    display: flex;
    justify-content: space-between;
  }
  .container__advantages .container__differences-question {
    text-align: left;
  }
  .container__advantages h2 {
    color: #242d52;
    width: 20rem;
    padding-bottom: 1.5rem;
  }
  .container__advantages p {
    width: 20rem;
    color: #9095a7;
    line-height: 1.5;
  }
  .container__advantages .container__list_of_advantages {
    position: relative;
    top: -2rem;
    counter-reset: section;
  }
  .container__advantages .container__list_of_advantages:first-of-type, .container__advantages .container__list_of_advantages :nth-of-type(2) {
    margin-bottom: 2rem;
  }
  .container__advantages .container__list_of_advantages .advantage_title {
    margin-left: 0;
    color: #242d52;
    font-weight: 700;
  }
  .container__advantages .container__list_of_advantages .advantage_title:before {
    counter-increment: section;
    content: "0" counter(section);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 3.5em;
    height: 2rem;
    position: relative;
    text-align: center;
    top: 2rem;
    right: 3.5rem;
    background: #f25f3a;
    border-radius: 20px;
    color: #fff;
    font-weight: 400;
  }
  .container__advantages .container__list_of_advantages .advantage_title:after {
    display: none;
  }
}
@media screen and (min-width: 900px) {
  .nav__cta {
    width: 7rem;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 0.85rem;
    float: right;
    padding: 0.6rem 0;
    font-size: 0.8rem;
    font-weight: 700;
    border: 1px solid transparent;
    border-radius: 20px;
    color: #fff;
    background-color: #f25f3a;
    box-shadow: 0px 6px 10px rgba(242, 95, 58, 0.65);
    cursor: pointer;
  }
  .nav__cta:hover {
    background-color: rgba(242, 95, 58, 0.65);
  }
}
@media screen and (min-width: 1200px) {
  .container__presentation {
    margin-top: 5rem;
  }
}

/*# sourceMappingURL=styles.css.map */

